# chess-coach

./: .dockerignore  .env.example  .gitignore  .upstream-ref  BUILDING.md  CHANGELOG.md  CHESS COACH _ Claude Review_ Definitively Fixing _Backend Not Found_ and _Analysis Error.md  CHESS COACH _ Diagnostic Report for External Review.md  CLA-CCLA.md  CLA-ICLA.md  CONTRIBUTING.md  Chess Coach _ Progress _ Problems Report _2026-06-17_v1-unverified.md  Chess Coach _ Progress _ Problems Report _2026-06-17_v2-verified.md  Dockerfile  LICENSE  LICENSING.md  README.md  SESSION-HANDOVER-2026-06-21-memory-and-artifact-cleanup.md  SESSION-HANDOVER-2026-06-22.md  SESSION-HANDOVER-2026-06-23.md  SESSION-HANDOVER-2026-06-24.md  SESSION-HANDOVER-2026-06-26.md  SESSION-HANDOVER-2026-06-28.md  SESSION-HANDOVER-2026-07-03.md  SESSION-HANDOVER-APP-DATA-DIR-FIX.md  SESSION-HANDOVER-MAIA-FIX.md  SESSION-HANDOVER-PRACTICE-DECK-SOURCE.md  SESSION-HANDOVER-STORAGE-MIGRATIONS-MISSING.md  Session Started _ State Assessment.md  docker-compose.yml  prompt1.txt  pyproject.toml
.a0proj/: project.json
.github/workflows/: smoke-no-concurrency.yml  smoke-prebuilt.yml  smoke-services-only.yml  smoke-simple.yml  smoke.yml
apps/: README.md
apps/cli/: README.md
apps/desktop/: .gitignore  README.md  UPSTREAM.md  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
data/qdrant/: config.yaml
docs/: 16_l2_gold_set_v1.md  CHANGELOG.md  PHASE-1-KICKOFF.md  README.md  REPO-READINESS.md  VERIFICATION.md
docs/01_architecture/: system-architecture.md
docs/02_modules/: module-decomposition.md
docs/03_technology/: technology-comparison.md
docs/04_database/: database-decision.md
docs/05_desktop_shell/: desktop-shell-decision.md
docs/06_multi_agent/: multi-agent-workflow.md
docs/07_risk/: risk-analysis.md
docs/08_security/: security-strategy.md
docs/09_performance/: performance-strategy.md
docs/10_roadmap/: implementation-roadmap.md  phase-plan-v2.md
docs/11_repo_structure/: repository-structure.md
docs/12_claude_review/: claude-review-package.md  fable5-prompt1-ready-to-paste.md  fable5-review-prompts-v1.md
docs/13_review_response/: claude-review-received.md  legal-opinion-integration.md  legal-protocol-assessment-received.md  legal-questions-brief.md  response-to-review.md  session-2026-06-16-repo-hygiene-and-enginespage.md  session-2026-06-17-memory-audit-and-gateway-polish.md  session-2026-06-17-repo-hygiene.md  session-2026-06-18-false-claims-investigation.md  session-2026-06-20-architecture-drift-scope.md
docs/14_adrs/: ADR-0000-template.md  ADR-0001-async-sync-boundary.md  ADR-0002-error-envelope.md  ADR-0003-schema-evolution.md  ADR-0004-license-posture.md  ADR-0005-coach-state-jotai.md  ADR-0006-engine-pool-failure-modes.md  README.md
docs/15_integration_surfaces/: en-croissant.md
docs/15_methodology/: profile-metrics-v1.md
docs/16_audit/: BBF-68.1-candidate-survey-2026-07-17.md  BBF-68.1-spike-report-2026-07-18.md  BBF-68.2-protection-registry-pattern.md  project-audit-2026-06-14.md
docs/16_protocol/: README.md  chess-coach-protocol-v1.md
docs/17_lazy_eval_graph/: RESULTS.md  SPEC.md
docs/20_datasets/: L2-gold-v1.md  archetype-gold-v1.md  narrative-gold-v1.md  qdrant-deployment.md
docs/research/: chessstalker-concepts.md  en-croissant-analysis.md
documents/: .~lock.Audit Committed _ Training Cards Investigation Complete.ods#  .~lock.CHESS COACH _ Deep Project Audit _ State Analysis Report.ods#  .~lock.Narrations table schema _from SQLite PRAGMA.ods#  Audit Committed _ Training Cards Investigation Complete.ods  CHESS COACH _ Deep Project Audit _ State Analysis Report.ods  Narrations table schema _from SQLite PRAGMA.ods
infra/: README.md
libs/: README.md
scripts/: README.md  backup_session.sh  curation_status.py  lint-utf8.mjs  ocr_spike.py  pdftomd_probe.py  qdrant_spike.py  start_gateway.sh  start_qdrant.sh  validate_archetype_gold.py  validate_narrative_gold.py
scripts/dev/: check_frontend_imports.py
services/: README.md
specs/: README.md
specs/v1.0/: README.md  chess-coach-protocol-v1.md
tests/: README.md  conftest.py
tests/gold/: chess_gold_set_v1.json  phase4_v1_fixtures.py
tests/integration/: conftest.py  smoke_test.py  test_api_routes.py  test_engine_orch.py  test_eval_verifier_integration.py  test_gateway_error_handling.py  test_kb_qdrant_live.py  test_ocr_backend.py  test_pdf_import.py  test_probe_with_gold_set.py  test_profile_analysis.py  test_profile_archetypes_integration.py  test_repertoire_blunders.py  test_training_schedule.py
tests/perf/: conftest.py  test_kb_reembed_roundtrip.py
tests/unit/: test_L2_v2_corpus.py  test_archetype_gold_corpus.py  test_archetype_knn.py  test_auth.py  test_check_frontend_imports.py  test_curation_status_script.py  test_descriptor.py  test_engine_pool_lifecycle.py  test_uci.py  (+23 more)
tools/: README.md
(+169 files in other folders)
